# lauditd

./: Makefile.am  README  README.md  configure.ac  lauditd.spec.in
src/: Makefile.am
src/lauditd/: Makefile.am  lauditd.c
systemd/: lauditd  lauditd@.service
